--- a/src/tak.html
+++ b/src/tak.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blomster Bjarne - Min kurv</title>
+    <title>Blomster Bjarne - Tak for bestilling af abonnement</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,103 +13,42 @@
     />
     <link rel="stylesheet" href="style.css" />
     <style>
-      p {
-        margin-block: 0;
-      }
-
-      /* progressbar mobil */
-      [class^="ball"] {
-        display: grid;
-        place-content: center;
-      }
-      .overskrift {
-        font-size: var(--abonnement-text-info);
-        font-family: var(--font-body);
-      }
-      .full_bar {
+      .primary button {
+        background-color: var(--color-primary-button-background);
+        color: var(--color-primary-button-text);
+        font-family: var(--button-text);
+        font-weight: var(--font-weight-semibold);
+        font-size: var(--button-mobile);
+        padding: 15px 40px;
+        border: none;
+        box-shadow: var(--shadow);
         display: flex;
-
-        place-items: center;
-      }
-      .bar1,
-      .bar2,
-      .bar3,
-      .bar4 {
-        display: flex;
-
-        place-items: center;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        border-radius: var(--radius-mobile);
+        max-width: 50%;
+        height: 50px;
+        gap: 10px;
       }
 
-      .ball1,
-      .ball2,
-      .ball3,
-      .ball4 {
-        margin-left: -3px;
-        width: 20px;
-        height: 20px;
-        background-color: var(--color-kurv-bar-active);
-        border-radius: 100%;
-        font-family: var(--font-body);
-        font-size: var(--progressbar-number);
-
-        color: var(--color-kurv-bar-text);
+      .primary button:hover {
+        background-color: var(--color-primary-button-hover-background);
       }
 
-      .line1,
-      .line2,
-      .line3 {
-        width: 60px;
-        height: 0px;
-        border: solid 2px var(--color-kurv-bar-active);
-        margin-left: -3px;
-      }
-
-      /* progressbar desktop */
       @media (min-width: 900px) {
-        .overskrift {
-          font-size: var(--body-desktop);
-        }
-
-        .tal {
-          font-size: var(--body-desktop);
-        }
-
-        .ball1,
-        .ball2,
-        .ball3,
-        .ball4 {
-          width: 25px;
-          height: 25px;
-          background-color: var(--color-kurv-bar-disabled);
-          border-radius: 100%;
-          font-family: var(--font-body);
-          font-size: var(--h4-desktop);
-          color: var(--color-kurv-bar-text);
-        }
-        .ball1,
-        .ball2,
-        .ball3,
-        .ball4 {
-          background-color: var(--color-kurv-bar-active);
-          z-index: 1;
-        }
-
-        .line1,
-        .line2,
-        .line3 {
-          width: 115px;
-          height: 0px;
-          background-color: var(--color-kurv-bar-active);
+        .primary button {
+          font-size: var(--button-desktop);
+          padding: 15px 60px;
+          border-radius: var(--radius-desktop);
         }
       }
     </style>
   </head>
   <body>
-    <!-------------------------------------------------------------------------------------------- HEADER START -->
     <header class="pb-l-spacing-desktop">
-      <!-- banner start -->
       <div
-        class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-banner_text"
+        class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
       >
         <p tabindex="0">Køb dine blomster i vores butikker</p>
         <p tabindex="0">
@@ -117,8 +56,6 @@
           første levering
         </p>
       </div>
-      <!-- banner start -->
-
       <!-- LOGO DESKTOP START -->
       <section tabindex="0">
         <a class="navigation_desktop" href="index.html">
@@ -247,7 +184,7 @@
           <li>
             <a
               tabindex="0"
-              href="index.html"
+              href="#"
               class="font-other-headings text-h3-mobile lg:text-h5-desktop"
               >Begivenheder</a
             >
@@ -255,7 +192,7 @@
           <li>
             <a
               tabindex="0"
-              href="index.html"
+              href="#"
               class="font-other-headings text-h3-mobile lg:text-h5-desktop"
               >Kontakt os</a
             >
@@ -293,16 +230,13 @@
       </nav>
       <!-- MENUPUNKTER SLUT -->
     </header>
-    <!-------------------------------------------------------------------------------------------- HEADER SLUT -->
-
-    <!-------------------------------------------------------------------------------------------- MAIN START -->
     <main
-      class="mx-[60px] pb-l-spacing-mobile lg:mx-[160px] lg:pb-xl-spacing-desktop"
+      class="mx-[30px] pb-xxl-spacing-mobile lg:mx-[80px] lg:pb-xxl-spacing-desktop"
     >
-      <!------------------------ LOG IND -->
+      <!--------------------------------------------------------------------- LOG IND -->
       <section
         id="loginbox"
-        class="placering_box gemt fixed top-2 left-0 z-10 mx-10 max-h-screen max-w-[600px] border-2 border-color-black bg-background-color pb-xl-spacing-mobile text-center font-font-body lg:left-[25%]"
+        class="placering_box gemt fixed top-2 left-0 mx-10 max-h-screen max-w-[600px] border-2 border-color-black bg-background-color pb-xl-spacing-mobile text-center font-font-body lg:left-[25%]"
       >
         <div class="login_opret grid grid-cols-2 items-center">
           <div class="logind flex items-center px-[30px]">
@@ -383,143 +317,26 @@
           </form>
         </div>
       </section>
-      <!------------------------ SEKTION 1 -->
-      <section class="">
-        <!-- progress bar -->
-        <article
-          class="grid place-content-center pb-l-spacing-mobile lg:pb-m-spacing-desktop"
-        >
-          <div class="full_bar">
-            <!-- kurv -->
-            <div>
-              <p class="overskrift -ml-2 lg:-ml-3">Kurv</p>
-              <div class="bar1">
-                <div class="ball1">
-                  <a href="kurv.html"><p class="tal">1</p></a>
-                </div>
-                <div class="line1"></div>
-              </div>
-            </div>
-
-            <!-- info -->
-            <div>
-              <p class="overskrift -ml-1.5 lg:-ml-2">Info</p>
-              <div class="bar2">
-                <div class="ball2">
-                  <a href="information.html"><p class="tal">2</p></a>
-                </div>
-                <div class="line2"></div>
-              </div>
-            </div>
-
-            <!-- betal -->
-            <div>
-              <p class="overskrift -ml-2 lg:-ml-3">Betal</p>
-              <div class="bar3">
-                <div class="ball3">
-                  <a href="betal.html"><p class="tal">3</p></a>
-                </div>
-                <div class="line3"></div>
-              </div>
-            </div>
-
-            <!-- tak! -->
-            <div>
-              <p class="overskrift -ml-1">Tak!</p>
-              <div class="bar4">
-                <div class="ball4">
-                  <a href="betal_bekraeft.html"><p class="tal">4</p></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
-        <!-- tekst -->
-        <article class="pb-l-spacing-mobile">
-          <h1
-            class="text-center font-main-heading text-h1-mobile lg:text-h1-desktop"
-          >
-            Tak for dit køb!
-          </h1>
-          <p
-            class="pt-s-spacing-mobile font-font-body text-abonnement-text-info lg:mx-auto lg:w-2/3 lg:text-body-mobile"
-          >
-            Vi sætter stor pris på at du har valgt at bestille dit abonnement
-            hos Blomster Bjarne. Vi håber, at du/I bliver glade for jeres nye
-            blomsterabonnement! Du vil snart modtage en ordrebekræftelse på SMS
-            og/eller e-mail.
-          </p>
-        </article>
-      </section>
-
-      <!------------------------ SEKTION 2 -->
-      <section
-        class="grid gap-xl-spacing-mobile lg:grid-cols-2 lg:gap-xxxl-spacing-desktop"
-      >
-        <!-- ordreoversigt -->
+      <section>
         <article>
-          <!-- overskrift -->
-          <div class="mb-s-spacing-mobile">
-            <h2 class="font-other-headings text-h3-mobile font-bold">
-              Din ordre #100342
-            </h2>
-            <div class="border-[0.5px] border-color-black"></div>
-          </div>
-          <!-- ordreoversigt -->
-          <div class="mb-s-spacing-mobile font-font-body text-body-mobile">
-            <div class="grid gap-xxs-spacing-mobile">
-              <p class="font-bold">Blomsterabonnement</p>
-              <p>Lille</p>
-              <p>Neutral og tæt</p>
-              <p>Ikke sensitiv</p>
-              <p>Hver anden uge</p>
-            </div>
-          </div>
-        </article>
+          <div>
+            <h1
+              class="py-xxl-spacing-mobile text-center font-main-heading text-h1-mobile font-bold"
+            >
+              Tak!
+            </h1>
 
-        <!-- informationsoversigt -->
-        <article>
-          <!-- overskrift -->
-          <div class="mb-s-spacing-mobile">
-            <h2 class="font-other-headings text-h3-mobile font-bold">
-              Dine informationer
+            <h2
+              class="mx-auto pb-xl-spacing-mobile text-center font-other-headings text-h2-mobile lg:w-2/3"
+            >
+              Vi sætter stor pris på at du har valgt at bestille dit abonnement
+              hos Blomster Bjarne
             </h2>
-            <div class="border-[0.5px] border-color-black"></div>
           </div>
-          <!-- priser -->
-          <div
-            class="lg:mb-sp mb-s-spacing-mobile font-font-body text-body-mobile"
-          >
-            <div class="grid gap-xxs-spacing-mobile">
-              <div>
-                <p class="font-bold">Navn</p>
-                <p>Sofie Larsen</p>
-              </div>
-              <div>
-                <p class="font-bold">Adresse</p>
-                <p>
-                  Strandvejen 167 <br />
-                  2900 Hellerup, Danmark
-                </p>
-              </div>
-              <div>
-                <p class="font-bold">E-mail</p>
-                <p>sofie@gmail.com</p>
-              </div>
-              <div>
-                <p class="font-bold">Telefonnummer</p>
-                <p>+45 12345678</p>
-              </div>
-            </div>
-          </div>
-
-          <!-- knap -->
-          <div
-            class="grid justify-end pt-m-spacing-mobile lg:pt-xxs-spacing-mobile"
-          >
+          <div class="primary">
             <a
               tabindex="0"
-              class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-l-spacing-mobile font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
+              class="mx-auto flex w-1/2 flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-1/3 lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
               href="index.html"
               >Tilbage til forsiden</a
             >
@@ -527,9 +344,6 @@
         </article>
       </section>
     </main>
-    <!-------------------------------------------------------------------------------------------- MAIN SLUT -->
-
-    <!--------------------------------------------------------------------------------------------- FOOTER START -->
     <footer
       itemscope
       itemtype="https://schema.org/LocalBusiness"
@@ -537,11 +351,11 @@
       class="font-font-body text-body-mobile text-background-color lg:text-body-desktop"
     >
       <article
-        class="bg-footer-background1 pt-xl-spacing-mobile text-center lg:w-full lg:pt-xl-spacing-desktop"
+        class="bg-footer-background1 pt-xl-spacing-mobile text-center lg:pt-xl-spacing-desktop"
       >
-        <!--------------------------------   PRIMÆR INDHOLD -->
+        <!-- primær indhold -->
         <div class="desktop lg:grid lg:grid-cols-3 lg:pb-xxl-spacing-desktop">
-          <!--------------------------------   SEKTION 1 BUTIKKER -->
+          <!-- butikker -->
           <section
             class="butikker grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
@@ -555,7 +369,7 @@
                 itemscope
                 itemtype="https://schema.org/PostalAddress"
                 tabindex="0"
-                class="strandvejen not-italic"
+                class="strandvejen"
               >
                 <p itemprop="streetAddress">Strandvejen 167</p>
                 <p>
@@ -563,10 +377,10 @@
                   ><span itemprop="addressLocality"> Hellerup</span>
                 </p>
                 <p><span itemprop="addressLocality">Danmark</span></p>
-
-                <a href="tel:+4539629059"
-                  >Tlf.: <span itemprop="telephone">+45 39 62 90 59</span></a
-                >
+                <p>
+                  <a href="tel:+4539629059"></a> Tlf.:
+                  <span itemprop="telephone">+45 39 62 90 59</span>
+                </p>
               </address>
 
               <address
@@ -574,7 +388,7 @@
                 itemscope
                 itemtype="https://schema.org/PostalAddress"
                 tabindex="0"
-                class="gunnar not-italic"
+                class="gunnar"
               >
                 <p itemprop="streetAddress">Gunnar Nu Hansens Pl. 6</p>
                 <p>
@@ -582,10 +396,10 @@
                   ><span itemprop="addressLocality"> København Ø</span>
                 </p>
                 <p><span itemprop="addressLocality">Danmark</span></p>
-
-                <a href="tel:+4536260700"
-                  >Tlf.: <span itemprop="telephone">+45 36 26 07 00</span></a
-                >
+                <p>
+                  <a href="tel:+4536260700"></a>
+                  Tlf.: <span itemprop="telephone">+45 36 26 07 00</span>
+                </p>
               </address>
 
               <address
@@ -593,7 +407,7 @@
                 itemscope
                 itemtype="https://schema.org/PostalAddress"
                 tabindex="0"
-                class="vaernedamsvej not-italic"
+                class="vaernedamsvej"
               >
                 <p itemprop="streetAddress">Værnedamsvej 4A st.</p>
                 <p>
@@ -601,15 +415,15 @@
                   ><span itemprop="addressLocality"> København V</span>
                 </p>
                 <p><span itemprop="addressLocality">Danmark</span></p>
-
-                <a href="tel:+4526117006"
-                  >Tlf.: <span itemprop="telephone">+45 26 11 70 06</span></a
-                >
+                <p>
+                  <a href="tel:+4526117006"></a>Tlf.:
+                  <span itemprop="telephone">+45 26 11 70 06</span>
+                </p>
               </address>
             </div>
           </section>
 
-          <!--------------------------------   SEKTION 2 INFORMATION LINK -->
+          <!-- information links -->
           <section
             class="informationer flex flex-col gap-l-spacing-mobile pb-xxl-spacing-mobile lg:gap-0 lg:pb-0"
           >
@@ -621,7 +435,7 @@
             </h2>
             <div class="mx-auto">
               <div class="text-start underline lg:pb-l-spacing-desktop">
-                <a tabindex="0" href="index.html">Om os</a>
+                <a tabindex="0" href="#">Om os</a>
               </div>
               <div class="text-start underline lg:pb-l-spacing-desktop">
                 <a tabindex="0" href="#">Kontakt os</a>
@@ -632,7 +446,7 @@
             </div>
           </section>
 
-          <!--------------------------------   SEKTION 3 ÅBNINGSTIDER -->
+          <!-- åbningstider -->
           <section
             class="abningstider grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
@@ -671,7 +485,7 @@
             </div>
           </section>
 
-          <!--------------------------------   SEKTION 4 FØLG OS HER -->
+          <!-- følg os her links -->
           <section
             class="folgosher pb-xxl-spacing-mobile lg:col-start-2 lg:pb-0 lg:pt-xxl-spacing-desktop"
           >
@@ -723,24 +537,22 @@
           </section>
         </div>
 
-        <!--------------------------------   SEKTION 5 SEKUNDÆR INDHOLD -->
+        <!-- sekundær indhold  -->
         <section
           class="nederst grid gap-l-spacing-mobile bg-footer-background2 pb-xl-spacing-mobile pt-l-spacing-mobile lg:flex lg:place-content-center lg:gap-20"
         >
           <p tabindex="0">CVR: 35649328</p>
-          <a tabindex="0" class="cursor-pointer underline" href="index.html"
+          <a tabindex="0" class="cursor-pointer underline" href="#"
             >Cookiepolitik</a
           >
-          <a tabindex="0" class="cursor-pointer underline" href="index.html"
+          <a tabindex="0" class="cursor-pointer underline" href="#"
             >Privatlivspolitik</a
           >
-          <a tabindex="0" class="cursor-pointer underline" href="index.html"
+          <a tabindex="0" class="cursor-pointer underline" href="#"
             >Handelsbetingelser</a
           >
         </section>
       </article>
     </footer>
-    <!--------------------------------------------------------------------------------------------- FOOTER SLUT -->
-    <script type="module" src="main.js"></script>
   </body>
 </html>
