--- a/src/vaser.html
+++ b/src/vaser.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <style>
+      /* generelt */
       .baggrundsbillede {
         background-image: url(img/tekstur_baggrund.jpg);
         background-repeat: no-repeat;
@@ -88,9 +89,9 @@
     <a tabindex="0" class="skip-to-content-link" href="#section_1">
       Skip to content
     </a>
-    <!-- header -->
+    <!-------------------------------------------------------------------------------------------- HEADER START -->
     <header>
-      <!-- banner  -->
+      <!-- banner start -->
       <div
         class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-banner_text"
       >
@@ -100,6 +101,8 @@
           første levering
         </p>
       </div>
+      <!-- banner start -->
+
       <!-- LOGO DESKTOP START -->
       <section tabindex="0">
         <a class="navigation_desktop" href="index.html">
@@ -228,7 +231,7 @@
           <li>
             <a
               tabindex="0"
-              href="#"
+              href="index.html"
               class="font-other-headings text-h3-mobile lg:text-h5-desktop"
               >Begivenheder</a
             >
@@ -236,7 +239,7 @@
           <li>
             <a
               tabindex="0"
-              href="#"
+              href="index.html"
               class="font-other-headings text-h3-mobile lg:text-h5-desktop"
               >Kontakt os</a
             >
@@ -274,11 +277,13 @@
       </nav>
       <!-- MENUPUNKTER SLUT -->
     </header>
+    <!-------------------------------------------------------------------------------------------- HEADER SLUT -->
 
-    <!---------------------------------------------- HERO -->
+    <!-------------------------------------------------------------------------------------------- HERO START -->
     <section
       class="bg-hero_image bg-cover pt-l-spacing-mobile text-center lg:h-hero-height lg:px-xxl-spacing-desktop lg:py-l-spacing-mobile lg:pb-m-spacing-desktop"
     >
+      <!-- copy -->
       <div
         class="mx-10 border-2 border-graes-300 pt-m-spacing-mobile pl-10 pr-10 text-graes-300 lg:h-hero-border-height"
       >
@@ -301,6 +306,7 @@
           Vi glæder os til at se dig!
         </p>
       </div>
+      <!-- pil -->
       <div class="mt-l-spacing-desktop pb-xs-spacing-mobile">
         <svg
           class="mx-auto grid text-graes-300"
@@ -315,11 +321,13 @@
         </svg>
       </div>
     </section>
+    <!-------------------------------------------------------------------------------------------- HERO SLUT -->
 
+    <!-------------------------------------------------------------------------------------------- MAIN START -->
     <main
       class="baggrundsbillede px-[60px] pb-l-spacing-mobile lg:px-[160px] lg:pb-xl-spacing-desktop"
     >
-      <!--------------------------------------------------------------------- LOG IND -->
+      <!--LOG IND -->
       <section
         id="loginbox"
         class="placering_box gemt fixed top-2 left-0 mx-10 max-h-screen max-w-[600px] border-2 border-color-black bg-background-color pb-xl-spacing-mobile text-center font-font-body lg:left-[25%]"
@@ -407,8 +415,6 @@
       <section
         class="pt-l-spacing-mobile text-center lg:pb-l-spacing-desktop lg:pt-l-spacing-desktop"
       >
-        <!------------------------------- KNAP -->
-
         <h2 class="font-other-headings text-h2-mobile lg:text-h2-desktop">
           Vaser
         </h2>
@@ -1115,8 +1121,9 @@
         </div>
       </section>
     </main>
+    <!-------------------------------------------------------------------------------------------- MAIN SLUT -->
 
-    <!--------------------------------------------------------------------- FOOTER -->
+    <!--------------------------------------------------------------------------------------------- FOOTER START -->
     <footer
       itemscope
       itemtype="https://schema.org/LocalBusiness"
@@ -1126,9 +1133,9 @@
       <article
         class="bg-footer-background1 pt-xl-spacing-mobile text-center lg:w-full lg:pt-xl-spacing-desktop"
       >
-        <!-- primær indhold -->
+        <!--------------------------------   PRIMÆR INDHOLD -->
         <div class="desktop lg:grid lg:grid-cols-3 lg:pb-xxl-spacing-desktop">
-          <!-- butikker -->
+          <!--------------------------------   SEKTION 1 BUTIKKER -->
           <section
             class="butikker grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
@@ -1142,7 +1149,7 @@
                 itemscope
                 itemtype="https://schema.org/PostalAddress"
                 tabindex="0"
-                class="strandvejen"
+                class="strandvejen not-italic"
               >
                 <p itemprop="streetAddress">Strandvejen 167</p>
                 <p>
@@ -1150,10 +1157,10 @@
                   ><span itemprop="addressLocality"> Hellerup</span>
                 </p>
                 <p><span itemprop="addressLocality">Danmark</span></p>
-                <p>
-                  <a href="tel:+4539629059"></a> Tlf.:
-                  <span itemprop="telephone">+45 39 62 90 59</span>
-                </p>
+
+                <a href="tel:+4539629059"
+                  >Tlf.: <span itemprop="telephone">+45 39 62 90 59</span></a
+                >
               </address>
 
               <address
@@ -1161,7 +1168,7 @@
                 itemscope
                 itemtype="https://schema.org/PostalAddress"
                 tabindex="0"
-                class="gunnar"
+                class="gunnar not-italic"
               >
                 <p itemprop="streetAddress">Gunnar Nu Hansens Pl. 6</p>
                 <p>
@@ -1169,10 +1176,10 @@
                   ><span itemprop="addressLocality"> København Ø</span>
                 </p>
                 <p><span itemprop="addressLocality">Danmark</span></p>
-                <p>
-                  <a href="tel:+4536260700"></a>
-                  Tlf.: <span itemprop="telephone">+45 36 26 07 00</span>
-                </p>
+
+                <a href="tel:+4536260700"
+                  >Tlf.: <span itemprop="telephone">+45 36 26 07 00</span></a
+                >
               </address>
 
               <address
@@ -1180,7 +1187,7 @@
                 itemscope
                 itemtype="https://schema.org/PostalAddress"
                 tabindex="0"
-                class="vaernedamsvej"
+                class="vaernedamsvej not-italic"
               >
                 <p itemprop="streetAddress">Værnedamsvej 4A st.</p>
                 <p>
@@ -1188,15 +1195,15 @@
                   ><span itemprop="addressLocality"> København V</span>
                 </p>
                 <p><span itemprop="addressLocality">Danmark</span></p>
-                <p>
-                  <a href="tel:+4526117006"></a>Tlf.:
-                  <span itemprop="telephone">+45 26 11 70 06</span>
-                </p>
+
+                <a href="tel:+4526117006"
+                  >Tlf.: <span itemprop="telephone">+45 26 11 70 06</span></a
+                >
               </address>
             </div>
           </section>
 
-          <!-- information links -->
+          <!--------------------------------   SEKTION 2 INFORMATION LINK -->
           <section
             class="informationer flex flex-col gap-l-spacing-mobile pb-xxl-spacing-mobile lg:gap-0 lg:pb-0"
           >
@@ -1208,7 +1215,7 @@
             </h2>
             <div class="mx-auto">
               <div class="text-start underline lg:pb-l-spacing-desktop">
-                <a tabindex="0" href="#">Om os</a>
+                <a tabindex="0" href="index.html">Om os</a>
               </div>
               <div class="text-start underline lg:pb-l-spacing-desktop">
                 <a tabindex="0" href="#">Kontakt os</a>
@@ -1219,7 +1226,7 @@
             </div>
           </section>
 
-          <!-- åbningstider -->
+          <!--------------------------------   SEKTION 3 ÅBNINGSTIDER -->
           <section
             class="abningstider grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
@@ -1258,7 +1265,7 @@
             </div>
           </section>
 
-          <!-- følg os her links -->
+          <!--------------------------------   SEKTION 4 FØLG OS HER -->
           <section
             class="folgosher pb-xxl-spacing-mobile lg:col-start-2 lg:pb-0 lg:pt-xxl-spacing-desktop"
           >
@@ -1310,23 +1317,24 @@
           </section>
         </div>
 
-        <!-- sekundær indhold  -->
+        <!--------------------------------   SEKTION 5 SEKUNDÆR INDHOLD -->
         <section
           class="nederst grid gap-l-spacing-mobile bg-footer-background2 pb-xl-spacing-mobile pt-l-spacing-mobile lg:flex lg:place-content-center lg:gap-20"
         >
           <p tabindex="0">CVR: 35649328</p>
-          <a tabindex="0" class="cursor-pointer underline" href="#"
+          <a tabindex="0" class="cursor-pointer underline" href="index.html"
             >Cookiepolitik</a
           >
-          <a tabindex="0" class="cursor-pointer underline" href="#"
+          <a tabindex="0" class="cursor-pointer underline" href="index.html"
             >Privatlivspolitik</a
           >
-          <a tabindex="0" class="cursor-pointer underline" href="#"
+          <a tabindex="0" class="cursor-pointer underline" href="index.html"
             >Handelsbetingelser</a
           >
         </section>
       </article>
     </footer>
+    <!--------------------------------------------------------------------------------------------- FOOTER SLUT -->
     <script type="module" src="main.js"></script>
   </body>
 </html>
