--- a/src/index.html
+++ b/src/index.html
@@ -491,10 +491,9 @@
     </section>
     <!--------------------------------------------------------------------------------------------- HERO SLUT -->
 
-    <!-------------------------------------------------------------------------------------------- MAIN -->
+    <!-------------------------------------------------------------------------------------------- MAIN START -->
     <main class="overflow-x-clip">
-      <!---->
-      LOG IND -->
+      <!-- log ind -->
       <section
         id="loginbox"
         class="placering_box gemt fixed top-2 left-0 mx-10 max-h-screen max-w-[600px] border-2 border-color-black bg-background-color pb-xl-spacing-mobile text-center font-font-body lg:left-[25%]"
@@ -576,8 +575,7 @@
           </div>
         </div>
       </section>
-      <!---->
-      COOKIEBOX -->
+
       <article
         class="fixed bottom-0 right-0 z-10 h-[62%] w-[100%] rounded-t-cookie bg-background-color px-s-spacing-mobile pt-m-spacing-mobile font-font-body lg:right-52 lg:h-[50%] lg:w-[70%]"
         id="cookieboks"
@@ -1004,6 +1002,7 @@
         </article>
       </section>
     </main>
+    <!-------------------------------------------------------------------------------------------- MAIN SLUT -->
 
     <!--------------------------------------------------------------------------------------------- FOOTER START -->
     <footer
