--- a/src/abonnement4.html
+++ b/src/abonnement4.html
@@ -124,10 +124,9 @@
     </style>
   </head>
   <body class="bg-background-color">
-    <!--------------------------------------------------------------------- HEADER START -->
-
+    <!-------------------------------------------------------------------------------------------- HEADER START -->
     <header>
-      <!-- banner  -->
+      <!-- banner start -->
       <div
         class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-banner_text"
       >
@@ -137,6 +136,8 @@
           første levering
         </p>
       </div>
+      <!-- banner start -->
+
       <!-- LOGO DESKTOP START -->
       <section tabindex="0">
         <a class="navigation_desktop" href="index.html">
@@ -265,7 +266,7 @@
           <li>
             <a
               tabindex="0"
-              href="#"
+              href="index.html"
               class="font-other-headings text-h3-mobile lg:text-h5-desktop"
               >Begivenheder</a
             >
@@ -273,7 +274,7 @@
           <li>
             <a
               tabindex="0"
-              href="#"
+              href="index.html"
               class="font-other-headings text-h3-mobile lg:text-h5-desktop"
               >Kontakt os</a
             >
@@ -311,9 +312,9 @@
       </nav>
       <!-- MENUPUNKTER SLUT -->
     </header>
-    <!--------------------------------------------------------------------- HEADER SLUT -->
-    <!--------------------------------------------------------------------- MAIN START -->
+    <!-------------------------------------------------------------------------------------------- HEADER SLUT -->
 
+    <!--------------------------------------------------------------------- MAIN START -->
     <main>
       <!-- LOG IND -->
       <section
@@ -501,15 +502,19 @@
     </main>
     <!--------------------------------------------------------------------- MAIN SLUT -->
 
-    <!--------------------------------------------------------------------- FOOTER START -->
+    <!--------------------------------------------------------------------------------------------- FOOTER START -->
     <footer
+      itemscope
+      itemtype="https://schema.org/LocalBusiness"
       tabindex="0"
       class="font-font-body text-body-mobile text-background-color lg:text-body-desktop"
     >
       <article
-        class="bg-footer-background1 pt-xl-spacing-mobile text-center lg:pt-xl-spacing-desktop"
+        class="bg-footer-background1 pt-xl-spacing-mobile text-center lg:w-full lg:pt-xl-spacing-desktop"
       >
+        <!--------------------------------   PRIMÆR INDHOLD -->
         <div class="desktop lg:grid lg:grid-cols-3 lg:pb-xxl-spacing-desktop">
+          <!--------------------------------   SEKTION 1 BUTIKKER -->
           <section
             class="butikker grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
@@ -518,32 +523,66 @@
             </h2>
 
             <div class="adresser mx-auto grid gap-l-spacing-mobile text-left">
-              <address tabindex="0" class="strandvejen">
-                <p>Strandvejen 167</p>
-                <p>2900 Hellerup</p>
-                <p>Danmark</p>
+              <address
+                itemprop="address"
+                itemscope
+                itemtype="https://schema.org/PostalAddress"
+                tabindex="0"
+                class="strandvejen not-italic"
+              >
+                <p itemprop="streetAddress">Strandvejen 167</p>
                 <p>
-                  <a href="tel:+4539629059"></a>
-                  Tlf.: +45 39 62 90 59
+                  <span itemprop="postalCode">2900</span
+                  ><span itemprop="addressLocality"> Hellerup</span>
                 </p>
+                <p><span itemprop="addressLocality">Danmark</span></p>
+
+                <a href="tel:+4539629059"
+                  >Tlf.: <span itemprop="telephone">+45 39 62 90 59</span></a
+                >
               </address>
 
-              <address tabindex="0" class="gunnar">
-                <p>Gunnar Nu Hansens Pl. 6</p>
-                <p>2100 København Ø</p>
-                <p>Danmark</p>
-                <p><a href="tel:+4536260700"></a>Tlf.: +45 36 26 07 00</p>
+              <address
+                itemprop="address"
+                itemscope
+                itemtype="https://schema.org/PostalAddress"
+                tabindex="0"
+                class="gunnar not-italic"
+              >
+                <p itemprop="streetAddress">Gunnar Nu Hansens Pl. 6</p>
+                <p>
+                  <span itemprop="postalCode">2100</span
+                  ><span itemprop="addressLocality"> København Ø</span>
+                </p>
+                <p><span itemprop="addressLocality">Danmark</span></p>
+
+                <a href="tel:+4536260700"
+                  >Tlf.: <span itemprop="telephone">+45 36 26 07 00</span></a
+                >
               </address>
 
-              <address tabindex="0" class="vaernedamsvej">
-                <p>Værnedamsvej 4A st.</p>
-                <p>1619 København V</p>
-                <p>Danmark</p>
-                <p><a href="tel:+4526117006"></a>Tlf.: +45 26 11 70 06</p>
+              <address
+                itemprop="address"
+                itemscope
+                itemtype="https://schema.org/PostalAddress"
+                tabindex="0"
+                class="vaernedamsvej not-italic"
+              >
+                <p itemprop="streetAddress">Værnedamsvej 4A st.</p>
+                <p>
+                  <span itemprop="postalCode">1619</span
+                  ><span itemprop="addressLocality"> København V</span>
+                </p>
+                <p><span itemprop="addressLocality">Danmark</span></p>
+
+                <a href="tel:+4526117006"
+                  >Tlf.: <span itemprop="telephone">+45 26 11 70 06</span></a
+                >
               </address>
             </div>
           </section>
 
+          <!--------------------------------   SEKTION 2 INFORMATION LINK -->
           <section
             class="informationer flex flex-col gap-l-spacing-mobile pb-xxl-spacing-mobile lg:gap-0 lg:pb-0"
           >
@@ -555,7 +594,7 @@
             </h2>
             <div class="mx-auto">
               <div class="text-start underline lg:pb-l-spacing-desktop">
-                <a tabindex="0" href="#">Om os</a>
+                <a tabindex="0" href="index.html">Om os</a>
               </div>
               <div class="text-start underline lg:pb-l-spacing-desktop">
                 <a tabindex="0" href="#">Kontakt os</a>
@@ -566,11 +605,18 @@
             </div>
           </section>
 
+          <!--------------------------------   SEKTION 3 ÅBNINGSTIDER -->
           <section
             class="abningstider grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
             <h2 tabindex="0" class="text-h4-mobile lg:text-h4-desktop">
               ÅBNINGSTIDER
+              <meta
+                itemprop="openingHours"
+                content="Mo,Tu,We,Th,Fr 10:00-18:00"
+              />
+              <meta itemprop="openingHours" content="Sa 10:00-15:00" />
+              <meta itemprop="openingHours" content="Su 11:00-16:00" />
             </h2>
             <div class="tider grid grid-cols-2">
               <div
@@ -598,6 +644,7 @@
             </div>
           </section>
 
+          <!--------------------------------   SEKTION 4 FØLG OS HER -->
           <section
             class="folgosher pb-xxl-spacing-mobile lg:col-start-2 lg:pb-0 lg:pt-xxl-spacing-desktop"
           >
@@ -649,23 +696,24 @@
           </section>
         </div>
 
+        <!--------------------------------   SEKTION 5 SEKUNDÆR INDHOLD -->
         <section
           class="nederst grid gap-l-spacing-mobile bg-footer-background2 pb-xl-spacing-mobile pt-l-spacing-mobile lg:flex lg:place-content-center lg:gap-20"
         >
           <p tabindex="0">CVR: 35649328</p>
-          <a tabindex="0" class="cursor-pointer underline" href="#"
+          <a tabindex="0" class="cursor-pointer underline" href="index.html"
             >Cookiepolitik</a
           >
-          <a tabindex="0" class="cursor-pointer underline" href="#"
+          <a tabindex="0" class="cursor-pointer underline" href="index.html"
             >Privatlivspolitik</a
           >
-          <a tabindex="0" class="cursor-pointer underline" href="#"
+          <a tabindex="0" class="cursor-pointer underline" href="index.html"
             >Handelsbetingelser</a
           >
         </section>
       </article>
     </footer>
-    <!--------------------------------------------------------------------- FOOTER SLUT -->
+    <!--------------------------------------------------------------------------------------------- FOOTER SLUT -->
     <script type="module" src="main.js"></script>
   </body>
 </html>
