--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/svg" href="img/bb_favikon.svg" />
     <title>Blomster Bjarne - Københavns bedste blomsterforhandler</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,6 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+
     <style>
       /* generelt */
       body {
@@ -441,13 +443,13 @@
           >
             <h1
               tabindex="0"
-              class="pb-xs-spacing-mobile text-h1-mobile text-sol-300 lg:pb-s-spacing-desktop lg:text-h1-hero"
+              class="text-h1-mobile text-sol-300 lg:pb-s-spacing-desktop lg:text-h1-hero"
             >
               Bring sæsonen hjem til dig
             </h1>
             <p
               tabindex="0"
-              class="font-font-body text-button-mobile text-sol-300 lg:px-s-spacing-desktop"
+              class="font-font-body text-body-mobile text-sol-300 lg:px-s-spacing-desktop lg:text-body-desktop"
             >
               Med et abonnement hos Blomster Bjarne får du leveret unikke
               buketter fra hver sæson.
@@ -458,7 +460,7 @@
               class="mx-auto mt-s-spacing-desktop flex h-[50px] w-[70%] items-center justify-center gap-xs-spacing-mobile rounded-radius-desktop bg-color-primary-button-background py-s-spacing-mobile drop-shadow-buttonshadow hover:cursor-pointer hover:bg-color-primary-button-hover-background lg:w-[65%]"
             >
               <a
-                class="font-button-text text-body-mobile text-color-white"
+                class="font-button-text text-button-mobile text-color-white"
                 href="abonnement.html"
                 >Tegn mit abonnement</a
               >
