--- a/betal_kreditkort.html
+++ b/betal_kreditkort.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blomster Bjarne - Min kurv</title>
+    <link rel="shortcut icon" type="image/svg" href="./assets/bb_favikon.25fc4be1.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -593,7 +594,7 @@
                 tabindex="0"
                 class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-l-spacing-mobile font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
                 href="betal_bekraeft.html"
-                >Bekræft køb</a
+                >Bekræft mit køb</a
               >
             </div>
           </div>
