--- a/abonnement1.html
+++ b/abonnement1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blomster Bjarne - Bestil abonnement</title>
+    <link rel="shortcut icon" type="image/svg" href="./assets/bb_favikon.25fc4be1.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
