--- a/sitemap.html
+++ b/sitemap.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blomster Bjarne - Sitemap</title>
+    <link rel="shortcut icon" type="image/svg" href="./assets/bb_favikon.25fc4be1.svg" />
     
     <style>
       li {
